...

export default function HomeScreen() {
  const t = useTheme();
  const logoPng = loadLogoPng();

  return (
    <Screen testID="home-screen" scroll>
      <View
        style={{
          paddingHorizontal: t.spacing.lg,
          paddingTop: t.spacing.xxl,
          flexDirection: 'row',
          alignItems: 'center',
...
